force-app/main/default/objects/EYI_Project_Construction_Stages__c/EYI_Project_Construction_Stages__c.object-meta.xml
<CustomObject>
    <label>Project Construction Stages</label>
    <nameField>
        <label>Project Construction Stages Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Project Construction Stages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>