force-app/main/default/objects/EYI_Project_Construction_Stages__c/fields/EYI_Actual_date_of_completion__c.field-meta.xml
<CustomField>
    <fullName>EYI_Actual_date_of_completion__c</fullName>
    <label>Actual date of completion</label>
    <type>Date</type>
</CustomField>