force-app/main/default/objects/EYI_Project_Construction_Stages__c/fields/EYI_Milestone_Code__c.field-meta.xml
<CustomField>
    <fullName>EYI_Milestone_Code__c</fullName>
    <label>Milestone Code</label>
    <length>5</length>
    <type>Text</type>
</CustomField>