force-app/main/default/objects/EYI_Project_Construction_Stages__c/fields/EYI_Miletsone_Number__c.field-meta.xml
<CustomField>
    <fullName>EYI_Miletsone_Number__c</fullName>
    <label>Miletsone Number</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>