force-app/main/default/objects/EYI_Project_Construction_Stages__c/fields/EYI_Project__c.field-meta.xml
<CustomField>
    <fullName>EYI_Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project</label>
    <referenceTo>EYI_Project__c</referenceTo>
    <relationshipLabel>Project Construction Stages</relationshipLabel>
    <relationshipName>Project_Construction_Stages</relationshipName>
    <type>Lookup</type>
</CustomField>